syntax = "proto3";

package query;

option go_package = "./internal/query/pb";

// Enum Message type
enum MessageType {
  UNKNOWN_TYPE = 0;
  LOGIN_PASSWORD = 1;
  TEXT = 2;
  BINNARY = 3;
  CARD = 4;
  ANY = 5;
}

// Query
message QueryRequest {
  MessageType type = 1;
  int64 userID = 2;
}

message QueryResponse {
  int64 id = 1;
  bytes data = 2;
  string meta = 3;
  string error = 4;
}

service QueryService{
  rpc Query(QueryRequest) returns (QueryResponse) {} 
}